OMID-272 Support JDK17